5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4479/executions/1716_2503.log
== TEST (2019-05-14 17:34:34) 
-- CODE:
x = int(input("DN:"))
pi = 0
while(n > 1):
	if(n%2 == 1):
		pi = pi + (4/(2*n-1)) # se for impar
	else:
		pi = pi - (4/(2*n-1)) # se for par
		
	n = n-1

print(round(pi,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    while(n > 1):
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:34:35) 
-- CODE:
x = int(input("DN:"))
pi = 0
while(n > 1):
	if(n%2 == 1):
		pi = pi + (4/(2*n-1)) # se for impar
	else:
		pi = pi - (4/(2*n-1)) # se for par
		
	n = n-1

print(round(pi,8))
-- EXECUTION TIME:
0.189409
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2503/main.py", line 3, in <module>
    while(n > 1):
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:35:03) 
-- CODE:
x = int(input("DN:"))
pi = 0

while(n >= 1):
	if(n%2 == 1):
		pi = pi + (4/(2*n-1)) # se for impar
	else:
		pi = pi - (4/(2*n-1)) # se for par
		
	n = n-1

print(round(pi,8))
-- EXECUTION TIME:
0.135632
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2503/main.py", line 4, in <module>
    while(n >= 1):
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:35:05) 
-- CODE:
x = int(input("DN:"))
pi = 0

while(n >= 1):
	if(n%2 == 1):
		pi = pi + (4/(2*n-1)) # se for impar
	else:
		pi = pi - (4/(2*n-1)) # se for par
		
	n = n-1

print(round(pi,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    while(n >= 1):
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:35:49) 
-- CODE:
x = int(input("DN:"))
pi = 0

while(n >= 1):
	if(n%2 == 1):
		pi = pi + (4/(2*n-1)) # se for impar
	else:
		pi = pi - (4/(2*n-1)) # se for par
		
	n = n-1

print(round(pi,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    while(n >= 1):
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:36:00) 
-- CODE:
x = int(input("DN:"))
pi = 0

while(n >= 1):
	if(n%2 == 1):
		pi = pi + (4/(2*n-1)) # se for impar
	else:
		pi = pi - (4/(2*n-1)) # se for par
		
	n = n-1

print(round(pi,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    while(n >= 1):
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:36:16) 
-- CODE:
x = int(input("DN:"))
pi = 0

while(n >= 1):
	if(n%2 == 1):
		pi = pi + (4/(2*n-1)) # se for impar
	else:
		pi = pi - (4/(2*n-1)) # se for par
		
	n = n-1

print(round(pi,8))
-- EXECUTION TIME:
0.129425
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2503/main.py", line 4, in <module>
    while(n >= 1):
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:36:50) 
-- CODE:
x = int(input("DN:"))
pi = 0

while(n >= 1):
	if (n%2 == 1):
		pi = pi + (4/(2*n-1)) # se for impar
	else:
		pi = pi - (4/(2*n-1)) # se for par
		
	n = n-1

print(round(pi,8))
-- EXECUTION TIME:
0.183816
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2503/main.py", line 4, in <module>
    while(n >= 1):
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:36:51) 
-- CODE:
x = int(input("DN:"))
pi = 0

while(n >= 1):
	if (n%2 == 1):
		pi = pi + (4/(2*n-1)) # se for impar
	else:
		pi = pi - (4/(2*n-1)) # se for par
		
	n = n-1

print(round(pi,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    while(n >= 1):
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:36:51) 
-- CODE:
x = int(input("DN:"))
pi = 0

while(n >= 1):
	if (n%2 == 1):
		pi = pi + (4/(2*n-1)) # se for impar
	else:
		pi = pi - (4/(2*n-1)) # se for par
		
	n = n-1

print(round(pi,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    while(n >= 1):
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:36:51) 
-- CODE:
x = int(input("DN:"))
pi = 0

while(n >= 1):
	if (n%2 == 1):
		pi = pi + (4/(2*n-1)) # se for impar
	else:
		pi = pi - (4/(2*n-1)) # se for par
		
	n = n-1

print(round(pi,8))
-- EXECUTION TIME:
0.126581
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2503/main.py", line 4, in <module>
    while(n >= 1):
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:36:52) 
-- CODE:
x = int(input("DN:"))
pi = 0

while(n >= 1):
	if (n%2 == 1):
		pi = pi + (4/(2*n-1)) # se for impar
	else:
		pi = pi - (4/(2*n-1)) # se for par
		
	n = n-1

print(round(pi,8))
-- EXECUTION TIME:
0.121705
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2503/main.py", line 4, in <module>
    while(n >= 1):
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:36:52) 
-- CODE:
x = int(input("DN:"))
pi = 0

while(n >= 1):
	if (n%2 == 1):
		pi = pi + (4/(2*n-1)) # se for impar
	else:
		pi = pi - (4/(2*n-1)) # se for par
		
	n = n-1

print(round(pi,8))
-- EXECUTION TIME:
0.20514
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2503/main.py", line 4, in <module>
    while(n >= 1):
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:36:53) 
-- CODE:
x = int(input("DN:"))
pi = 0

while(n >= 1):
	if (n%2 == 1):
		pi = pi + (4/(2*n-1)) # se for impar
	else:
		pi = pi - (4/(2*n-1)) # se for par
		
	n = n-1

print(round(pi,8))
-- EXECUTION TIME:
0.148583
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2503/main.py", line 4, in <module>
    while(n >= 1):
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:37:20) 
-- CODE:
x = int(input("DN:"))
pi = 0

while(n >= 1):
	if (n%2 == 1):
		pi = pi + (4/(2*n-1)) # se for impar
	else:
		pi = pi - (4/(2*n-1)) # se for par
		
	n = n-1

print(round(pi,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    while(n >= 1):
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:37:58) 
-- CODE:
x = int(input("Digite um numero: "))
pi = 0

while(n >= 1):
	if (n%2 == 1):
		pi = pi + (4/(2*n-1)) # se for impar
	else:
		pi = pi - (4/(2*n-1)) # se for par
		
	n = n-1

print(round(pi,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    while(n >= 1):
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:37:59) 
-- CODE:
x = int(input("Digite um numero: "))
pi = 0

while(n >= 1):
	if (n%2 == 1):
		pi = pi + (4/(2*n-1)) # se for impar
	else:
		pi = pi - (4/(2*n-1)) # se for par
		
	n = n-1

print(round(pi,8))
-- EXECUTION TIME:
0.218734
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2503/main.py", line 4, in <module>
    while(n >= 1):
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:38:00) 
-- CODE:
x = int(input("Digite um numero: "))
pi = 0

while(n >= 1):
	if (n%2 == 1):
		pi = pi + (4/(2*n-1)) # se for impar
	else:
		pi = pi - (4/(2*n-1)) # se for par
		
	n = n-1

print(round(pi,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    while(n >= 1):
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:49:13) 
-- CODE:
x = int(input("Digite um numero: "))
pi = 0

while(n >= 1):
	if (n%2 == 1):
		pi = pi + (4/(2*n-1)) # se for impar
	else:
		pi = pi - (4/(2*n-1)) # se for par
		
	n = n-1

print(round(pi,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    while(n >= 1):
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:49:15) 
-- CODE:
x = int(input("Digite um numero: "))
pi = 0

while(n >= 1):
	if (n%2 == 1):
		pi = pi + (4/(2*n-1)) # se for impar
	else:
		pi = pi - (4/(2*n-1)) # se for par
		
	n = n-1

print(round(pi,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    while(n >= 1):
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 14:49:22) 
-- CODE:
x = int(input("Digite um numero: "))
pi = 0

while(n >= 1):
	if (n%2 == 1):
		pi = pi + (4/(2*n-1)) # se for impar
	else:
		pi = pi - (4/(2*n-1)) # se for par
		
	n = n-1

print(round(pi,8))
-- EXECUTION TIME:
0.126493
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2503/main.py", line 4, in <module>
    while(n >= 1):
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
